--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,3 @@
-# azure-pipelines.yml
 trigger:
   branches:
     include:
@@ -7,15 +6,15 @@ trigger:
 
 # ────────────────────────── Global variables ──────────────────────────────
 variables:
-  imageName: azdevops-cicd-sample                # Docker tag base
-  azureSubscription: AzureSubscriptionConnection # ARM service connection
-  acrName: nithinkatruacr                        # Azure Container Registry
-  rgName: ci-cd-rg                               # Resource group for Web App
-  tfStateStorageAccount: tfstateYourSuffix       # Remote state storage
-  tfStateContainer: tfstate                      # Remote state container
-  sonarOrg: akhilmano1                           # SonarCloud organization
+  imageName: azdevops-cicd-sample
+  azureSubscription: AzureSubscriptionConnection
+  acrName: nithinkatruacr
+  rgName: ci-cd-rg
+  tfStateStorageAccount: tfstateYourSuffix
+  tfStateContainer: tfstate
+  sonarOrg: akhilmano1
 
-# ────────────────────────── Stage: Build / Test / Scan ────────────────────
+# ────────────────────── Stage: Build / Test / Scan ────────────────────────
 stages:
 - stage: Build
   displayName: "CI: Build, Test & Sonar"
@@ -31,13 +30,11 @@ stages:
     - checkout: self
       persistCredentials: true
 
-    # Verify Java (pre-installed on agent)
     - script: |
-        echo "JAVA_HOME = %JAVA_HOME%"
+        echo "JAVA_HOME=%JAVA_HOME%"
         java -version
       displayName: "Verify Java installation"
 
-    # Log in to ACR
     - task: AzureCLI@2
       displayName: "Login to ACR"
       inputs:
@@ -47,7 +44,6 @@ stages:
         inlineScript: |
           az acr login --name $(acrName)
 
-    # Node / NPM
     - task: NodeTool@0
       displayName: "Use Node.js 20"
       inputs:
@@ -65,7 +61,6 @@ stages:
       displayName: "Run tests"
       workingDirectory: $(Build.SourcesDirectory)
 
-    # Build & push Docker image
     - task: PowerShell@2
       displayName: "Build & push Docker image"
       inputs:
@@ -73,9 +68,8 @@ stages:
         workingDirectory: $(Build.SourcesDirectory)
         script: |
           docker build -t $(acrName).azurecr.io/$(imageName):$(Build.BuildId) .
-          docker push $(acrName).azurecr.io/$(imageName):$(Build.BuildId)
+          docker push  $(acrName).azurecr.io/$(imageName):$(Build.BuildId)
 
-    # SonarCloud analysis
     - task: SonarCloudPrepare@3
       displayName: "Prepare SonarCloud analysis"
       inputs:
@@ -92,11 +86,10 @@ stages:
     - task: SonarCloudPublish@3
       displayName: "Publish SonarCloud Quality Gate"
 
-    # Publish build artifacts (if needed by later stages)
     - publish: $(Build.ArtifactStagingDirectory)
       artifact: drop
 
-# ───────────────────────── Stage: Deploy (self-hosted) ────────────────────
+# ───────────────────────── Stage: Deploy ──────────────────────────
 - stage: Deploy
   displayName: "CD: Terraform + WebApp Deploy"
   dependsOn: Build
@@ -105,7 +98,6 @@ stages:
   - deployment: Deploy
     displayName: "Terraform + WebApp"
     environment: $(Build.SourceBranchName)
-
     pool:
       name: LocalSelfHostedPool1
       demands:
@@ -117,15 +109,11 @@ stages:
           steps:
           - checkout: self
 
-          # ─ Install Terraform ─
-- task: TerraformInstaller@0
-  displayName: "Install Terraform"
-  inputs:
-    # pick any specific 1.7 release that exists in HashiCorp’s releases list
-    terraformVersion: 1.7.5   # ← was 1.7.x
+          - task: TerraformInstaller@0
+            displayName: "Install Terraform"
+            inputs:
+              terraformVersion: 1.7.5        # exact version or 'latest'
 
-
-          # ──────────────── Terraform Init (OIDC-aware) ────────────────
           - task: TerraformTaskV4@4
             displayName: "Terraform Init"
             inputs:
@@ -140,7 +128,6 @@ stages:
             env:
               ARM_USE_AZUREAD: true
 
-          # ─────────────── Terraform Apply (OIDC-aware) ────────────────
           - task: TerraformTaskV4@4
             displayName: "Terraform Apply"
             inputs:
@@ -156,7 +143,6 @@ stages:
             env:
               ARM_USE_AZUREAD: true
 
-          # ───────────── Deploy container to Azure Web App ─────────────
           - task: AzureWebAppContainer@1
             displayName: "Deploy to Azure Web App"
             inputs:
